# BrixPicker

./: README.md  stack.xml
GUI/: index - Kopi.html  index.html
GUI/CSS/: main.css
bpBricksDetector/: CMakeLists.txt  Makefile  manifest.xml
bpBricksDetector/launch/: camera.launch
bpBricksDetector/src/: brickservice.cpp  main.cpp  my_publisher.cpp  shape.cpp
bpBricksDetector/srv/: command.srv
bpDrivers/: CMakeLists.txt  manifest.xml
bpDrivers/launch/: AcceleGlove.launch
bpDrivers/src/rx60_controller/: RX60Driver.cpp  RX60Driver.hpp  rx60_controller_node.cpp
bpDrivers/src/serial_port/serial_binary/: serial_binary.cpp
bpDrivers/src/serial_port/serial_string/: serialInterface.cpp  serialInterface.h  serial_string.cpp
bpDrivers/srv/: command.srv
bpGUI/: CMakeLists.txt  mainpage.dox  manifest.xml
bpGUI/include/bpGUI/: main_window.hpp  qnode.hpp
bpGUI/src/: main.cpp  main_window.cpp  qnode.cpp
bpLaunch/: mainpage.dox  manifest.xml
bpLaunch/launch/: BrixPicker.launch  plc_controller.launch  plc_serial_communication.launch  rx60_controller.launch  usb_cam.launch
bpMessy2Controller/: Makefile  mainpage.dox  manifest.xml
bpMessy2Controller/scripts/: Messy2Controller.py  main.py
bpMessy2Controller/srv/: command.srv
bpMsgs/: mainpage.dox  manifest.xml
bpMsgs/msg/: brick.msg  oee_data.msg  order.msg  robot_pick.msg  system_state.msg
bpOrderHandler/: mainpage.dox  manifest.xml
bpOrderHandler/cfg/: param.cfg
bpOrderHandler/scripts/: OrderHandler.py
bpPLCController/: CMakeLists.txt  mainpage.dox  manifest.xml
bpPLCController/src/plc_controller/: PLCController.cpp  PLCController.h  plc_controller_node.cpp
bpPLCController/srv/: command.srv  plc_command.srv
bpRobotMotionPlanner/: CMakeLists.txt  mainpage.dox  manifest.xml
bpRobotMotionPlanner/data/RSDWorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml
bpRobotMotionPlanner/data/RSDWorkCell/Geometry/: belt.stl  box.stl  camerabox.stl  tube.stl  tubes.stl
bpRobotMotionPlanner/data/RSDWorkCell/Gripper/Geometry/: gripperbase2.stl
bpRobotMotionPlanner/data/RSDWorkCell/StaubliRX60/: StaubliRX60.wc.xml
bpRobotMotionPlanner/data/RSDWorkCell/StaubliRX60/Geometry/: RX60B-HB - RX60B BASE HORIZONTAL CABLE OUTLET-1.STL  (+4 more)
bpRobotMotionPlanner/data/RSDWorkCellColor/: .goutputstream-A6ZCTW  .goutputstream-CL1TTW
bpRobotMotionPlanner/data/RSDWorkCellColor/Geometry/: belt.ac  box.ac  camerabox.ac  tube.ac  tubes.ac  workcell.ac  workcell.stl
bpRobotMotionPlanner/data/RSDWorkCellColor/Gripper/: Gripper.wc.xml
bpRobotMotionPlanner/src/: robot_motion_controller_node.cpp
(+21 files in other folders)
